--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,12 @@
     <body>
         <div>
             <a href="/"> Homepage </a>
-            <a href="contact/"> Contact </a>
+            <a href="/contact"> Contact </a>
+            {% if user.is_authenticated %}
+                <a href="/users/logout"> Logout </a>
+            {% else%}
+                <a href="/users/login"> Login </a>
+            {% endif %}
         </div>
         {% block content %}
         {% endblock %}
