--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,4 +7,7 @@
 {% block content %}
     <h1> {{ brand}} </h1>
     <h2> Under Construction</h2>
+    {% if user.is_authenticated %}
+        <h3> Welcome, {{ request.user.first_name}} ! </h3>
+    {% endif %}
 {% endblock %}
