--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,6 +5,8 @@
     {% endblock %}
 
     {% block content %}
-        <h1> About us</h1>
-        <p> Address: Street, Nr.1, City </p>
+        <div class = "topleft">
+            <h1> About us</h1>
+            <p> Address: Street, Nr.1, City </p>
+        </div>
     {% endblock %}
