--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
+        <style>
+        ul.product-list {
+            position: relative;
+            left: 200px;
+            list-style-type:none;
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0;
+            padding: 0;
+        }
+
+        ul.product-list li {
+            margin: 30px 30px;
+            width: calc(33.33% - 60px);
+        }
+        .topleft {
+            position: absolute;
+            top: 150px;
+            left: 150px;
+            font-size: 18px;
+        }
+        .topright {
+            position: absolute;
+            top: 400 px;
+            right: 200 px;
+            font-size: 18px;
+        }
+        .topcenter {
+            position:absolute;
+            top: 100px;
+            right: 600px;
+        }
+        </style>
         {% block title %}
         {% endblock %}
     </head>
 
-    <body>
-        <div>
-            <a href="/"> Homepage </a>
-            <a href="/contact"> Contact </a>
+
+
+    <body background = "/static/images/backround.png" width = "1460" height = "1500">
+
+        <div class = "topcenter" id="menu" align="middle">
+
+            <a href="/"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Homepage</font></a> |
+            <a href="{% url 'contact' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Contact</font></a> |
             {% if user.is_authenticated %}
-                <a href="/users/logout"> Logout </a>
+                <a href="{% url 'users:account:logout' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Logout</font></a> |
+                {% if user.is_superuser %}
+                    <a href="admin/"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Admin</font></a> |
+                {% endif %}
             {% else%}
-                <a href="/users/login"> Login </a>
+                <a href="{% url 'users:account:login' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Login</font></a> |
+                <a href="{% url 'users:account:register' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Register</font></a> |
             {% endif %}
+
         </div>
+
         {% block content %}
         {% endblock %}
+
     </body>
 
 </html>
