--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static%}
+{%load%}
     <head>
         <style>
         ul.product-list {
@@ -34,11 +35,34 @@
             top: 100px;
             right: 600px;
         }
+        .midleleft {
+            position: relative;
+            top: 400px;
+            left: 150px;
+            font-size: 18px;
+        }
+        .lowleft {
+            position: relative;
+            top: 450px;
+            font-size: 18px;
+        }
+    .add_product {
+            position:absolute;
+            top: 300px;
+            right: 600px;
+        }
+
+
         </style>
+
+        <link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
         {% block title %}
         {% endblock %}
+         <script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
     </head>
 
+        {%block style%}
+        {%endblock%}
 
 
     <body background = "/static/images/backround.png" width = "1460" height = "1500">
@@ -49,12 +73,16 @@
             <a href="{% url 'contact' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Contact</font></a> |
             {% if user.is_authenticated %}
                 <a href="{% url 'users:account:logout' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Logout</font></a> |
+                <a href="{% url 'users:profile' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Edit profile</font></a>
                 {% if user.is_superuser %}
-                    <a href="admin/"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Admin</font></a> |
+                    <a href="/admin/"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Admin</font></a> |
                 {% endif %}
             {% else%}
                 <a href="{% url 'users:account:login' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Login</font></a> |
                 <a href="{% url 'users:account:register' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Register</font></a> |
+            {% endif %}
+            {% if user.is_authenticated %}
+                        {% include 'mini_cart.html' %}
             {% endif %}
 
         </div>
