--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,16 +11,19 @@
         <h1> {{ brand}} </h1>
         {% if user.is_authenticated %}
             <h3> Welcome, {{ request.user.first_name}} ! </h3>
+        <a href="/users/login_view"><font color="#800000" face = "Edwardian Script ITC" size = "6">My page</font></a>
         {% endif %}
         <p>We have following categories you can choose from.</p>
         <div>
             <a href="{% url 'products:view_all_products' %}"> <font color="#800000" face = "Edwardian Script ITC" size = "6">Show all products</font></a>
 
         </div>
+
         <ul>
         {% for e  in categories %}
-            <li>{{ e }}</li>
+            <li><a href="/products/{{ e.name }}"> {{e}}</a></li>
         {% endfor %}
         </ul>
+
     </div>
 {% endblock %}
