--- a/templates/mini_cart.html
+++ b/templates/mini_cart.html
@@ -8,7 +8,7 @@
 
 <a href="">
     <div class="mini-cart-container" title="Total price of the cart: 1234 Eur">
-        <div class="number">3</div>
+        <div class="badge">3</div>
         <div class="icon-container">
             <i class="fas fa-shopping-cart"></i>
         </div>
